bug squashing

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ li {
 }
 
 div {
-  border-radius: 20px;
+  border-radius: 5px;
   overflow-x: hidden;
   
 }
